--- a/src/app/views/registration/recordable-subject/recordable-subject-tabbed-view.component.html
+++ b/src/app/views/registration/recordable-subject/recordable-subject-tabbed-view.component.html
@@ -17,7 +17,7 @@
        [instrumentRecordingUID]="instrumentRecordingUID"
        [recordingActUID]="recordingActUID"
        [recordableSubject]="tractIndex.recordableSubject"
-       [readonly]="canEditRecordableSubject"
+       [readonly]="!canEditRecordableSubject"
        (recordableSubjectEditorEvent)="onRecordableSubjectEditorEvent($event)">
 
       </emp-land-recordable-subject-editor>
