--- a/src/app/workspaces/land-transactions/land-transactions-workspace.component.html
+++ b/src/app/workspaces/land-transactions/land-transactions-workspace.component.html
@@ -50,10 +50,9 @@
     class="secondary">
 
     <emp-land-recordable-subject-tabbed-view
-      [instrumentRecordingUID]="selectedRecordableSubject.instrumentRecording.uid"
-      [recordingActUID]="selectedRecordableSubject.recordingAct.uid"
-      [canEditRecordableSubject]="selectedRecordableSubject.instrumentRecording.actions.can.openInstrument"
-      [canEditTractIndex]="true"
+      [instrumentRecordingUID]="selectedRecordingContext.instrumentRecordingUID"
+      [recordingActUID]="selectedRecordingContext.recordingActUID"
+      [canEditRecordableSubject]="selectedRecordingContext.actions.can.editRecordableSubject"
       (recordableSubjectTabbedViewEvent)="onRecordableSubjectTabbedViewEvent($event)">
 
     </emp-land-recordable-subject-tabbed-view>
@@ -65,8 +64,9 @@
     class="secondary">
 
     <emp-land-recording-act-edition
-      [instrumentRecordingUID]="selectedRecordingAct.instrumentRecording.uid"
-      [recordingActUID]="selectedRecordingAct.recordingAct.uid"
+      [instrumentRecordingUID]="selectedRecordingContext.instrumentRecordingUID"
+      [recordingActUID]="selectedRecordingContext.recordingActUID"
+      [readonly]="!selectedRecordingContext.actions.can.editRecordableSubject"
       (recordingActEditionEventType)="onRecordingActEditionEventType($event)">
 
     </emp-land-recording-act-edition>
