Add actions to certificate interface

--- a/src/app/views/certificate-emission/certificate-edition.component.html
+++ b/src/app/views/certificate-emission/certificate-edition.component.html
@@ -48,12 +48,12 @@
 
         </ng-container>
 
-        <button class="btn-action"
+        <button class="btn-action" *ngIf="certificate.actions.canClose"
           (click)="onCloseCertificateClicked()">
           Cerrar certificado
         </button>
 
-        <button class="btn-action" *ngIf="false"
+        <button class="btn-action" *ngIf="certificate.actions.canOpen"
           (click)="onOpenCertificateClicked()">
           Abrir certificado
         </button>
