--- a/src/app/views/certificate-emission/certificate-list.component.html
+++ b/src/app/views/certificate-emission/certificate-list.component.html
@@ -44,7 +44,7 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> </th>
       <td mat-cell *matCellDef="let row" class="column-action">
-        <mat-icon title="Eliminar este certificado"
+        <mat-icon title="Eliminar este certificado" *ngIf="row.actions.canDelete"
           (click)="onRemoveCertificateClicked(row)">
           delete
         </mat-icon>
