Add EmpFormKeyDownEnter directive

--- a/src/app/views/certificate-emission/certificate-creator.component.html
+++ b/src/app/views/certificate-emission/certificate-creator.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formHandler.form" (keydown.enter)="$event.preventDefault()"
+<form [formGroup]="formHandler.form" empNgFormKeyDownEnter
   autocomplete="off" class="form-section">
 
   <div fxLayout="column" fxLayoutGap="0.75rem">
@@ -96,8 +96,7 @@
         <label> Descripción y datos del predio: </label>
         <textarea class="text-area" empNgTextareaAutoresize [maxHeightTextarea]="null" rows="1"
           [formControlName]="controls.realEstateDescription"
-          [class.invalid-control]="formHandler.showInvalidControl(controls.realEstateDescription)"
-          (keydown.enter)="$event.stopPropagation()">
+          [class.invalid-control]="formHandler.showInvalidControl(controls.realEstateDescription)">
 
         </textarea>
       </div>
