--- a/src/app/views/recordable-subjects/parties/party-editor.component.html
+++ b/src/app/views/recordable-subjects/parties/party-editor.component.html
@@ -1,4 +1,5 @@
-<form [formGroup]="form" fxLayout="column" autocomplete="off" class="form-section">
+<form [formGroup]="form" empNgFormKeyDownEnter
+  fxLayout="column" autocomplete="off" class="form-section">
 
   <mat-divider class="divider-padding">
 
