--- a/src/app/views/registration/recording-book/book-entry-editor.component.html
+++ b/src/app/views/registration/recording-book/book-entry-editor.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formHandler.form" autocomplete="off" class="form-section">
+<form [formGroup]="formHandler.form" empNgFormKeyDownEnter autocomplete="off" class="form-section">
 
   <div fxLayout="row" fxLayout.lt-md="column">
 
